--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             
             micLevel = mic.getLevel();
             console.log(micLevel);
-  ellipse(width/2, constrain(height-micLevel*height*5, 0, height), 10, 10);
+  ellipse(100,100,200*micLevel,200*micLevel);
         }
         
         function r(){
